# quick-start

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
